<resources>
    <string name="app_name">Goods Deal</string>
    <string name="goods_deal">Goods Deal :)</string>
    <string name="login">Login</string>
    <string name="enter_username_or_email">Enter Username or Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="login_using_otp">Login using OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">Click Here</string>
    <string name="new_here">New Here?</string>
    <string name="signup">Signup</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login_using_password">Login using Password</string>
    <string name="are_you_a">Are you a:</string>
    <string name="signup">Signup</string>
    <string name="dealer">Dealer</string>
    <string name="driver">Driver</string>
    <string name="or_a">or a</string>
    <string name="go_back">Go Back</string>
    <string name="fill_your_details">Fill your Details</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="nature_of_material">Nature of Material</string>
    <string name="weight_of_material">Weight of Material</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_password">Create Password</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go Back</string>
    <string name="enter_age">Enter Age</string>
    <string name="truck_number">Truck Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="truck_capacity">Truck Capacity</string>
    <string name="transporter_name">Transporter Name</string>
    <string name="driving_experience">Driving Experience</string>
    <string name="enter_interested_routes">Enter Interested Routes:</string>
    <string name="route_1">Route 1:</string>
    <string name="from">From:</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="to">To:</string>
    <string name="route_2">Route 2:</string>
    <string name="route_3">Route 3:</string>
    <string name="recovery">Recovery</string>
    <string name="enter_email">Enter Email</string>
    <string name="request_otp">Request OTP</string>
    <string name="go_back">Go Back</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="change_password">Change Password</string>
    <string name="next">Next</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="change_password">Change Password</string>
    <string name="edit_details">Edit Details</string>
    <string name="book_driver">Book Driver</string>
    <string name="book">Book</string>
    <string name="go_back">Go Back</string>
    <string name="edit_details">Edit Details</string>
    <string name="confirm_dealer">Confirm Dealer</string>
    <string name="confirm">Confirm</string>
    <string name="truck_capacity">Truck Capacity</string>
</resources>