<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="90sp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_a"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/dealer"
        android:textColor="#673AB7"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/signup_dealer"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_a"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/driver"
        android:textColor="#673AB7"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:id="@+id/signup_driver"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/go_back"
        android:textColor="#ff0000"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/signup_back"
        />

</LinearLayout>