<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="90sp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username_or_email"
        android:inputType="text"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:id="@+id/login_uid"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:id="@+id/login_passw"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/login_lbtn"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/login_using_otp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:id="@+id/login_otpbtn"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/click_here"
            android:textColor="#3F51B5"
            android:textSize="17sp"
            android:id="@+id/login_fp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/signup"
            android:textColor="#3F51B5"
            android:textSize="17sp"
            android:id="@+id/login_sbtn"
            />

    </LinearLayout>

</LinearLayout>