<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordNew"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:inputType="number"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:id="@+id/recovery_passw_new"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginTop="90dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/recovery_passw_change"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/go_back"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:id="@+id/recovery_passw_back"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/signup"
            android:textColor="#3F51B5"
            android:textSize="17sp"
            android:id="@+id/login_passw_sbtn"
            />

    </LinearLayout>

</LinearLayout>